--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "fs-extra": "^11.3.3",
+    "mongoose": "^9.1.6",
     "multer": "^2.0.2",
     "openai": "^6.16.0"
   }
